# clic_clib

./: CMakeLists.txt  CMakeLists.txt-e  README.md  pyproject.toml
bindings/: bind_common.hpp  bind_determinants.cpp  bind_ed.cpp  bind_nbody.cpp  bind_tables.cpp  bind_wavefunction.cpp  bindings.cpp  bindings_legacy.cpp
clic_clib/: __init__.py  utils.py
cpp_src/: applyH.cpp  applyH.h  cat.txt  ci_core.cpp  ci_core.h  determinants.cpp  determinants.h  ed_tools.cpp  ed_tools.h  hamiltonian.cpp  hamiltonian.h  nbody.cpp  nbody.h  slater_condon.cpp  slater_condon.h  wavefunction.cpp  wavefunction.h  wavefunctions.cpp  wavefunctions.h
example_bastien/: example.py  h2o.xyz  toh5.py
tests/: h2o_h0U.h5  my_data.hdf5  run_tests.sh  test_applyH.py  test_applyH_fixed_basis.py  test_ed_tools.py  test_h2o_631g.py  test_h2o_sto3g.py  test_impurity.py  test_kernel.py  test_large_system.py  test_matrix_elements.py  test_operators.py  test_operators_2.py  test_utils.py  test_wavefunction_io.py
